<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_portrait"
    android:orientation="vertical" >    
    
    <TextView
	    android:id="@+id/lblNom"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="40dp"
		android:layout_marginLeft="20dp"
		android:textSize="15sp"
		android:text="@string/edit_nom"
		android:textColor="#ffffff"/>

   <EditText
	    android:id="@+id/txtNom"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="40dp"
	    android:layout_marginLeft="150dp"
	    android:textSize="15sp"
	    android:hint="@string/edit_nom"/>   
    
    <TextView
	    android:id="@+id/lblEmail"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="120dp"
		android:layout_marginLeft="20dp"
		android:textSize="15sp"
		android:text="@string/edit_email"
		android:textColor="#ffffff"/>
    
    <EditText
	    android:id="@+id/txtEmail"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="120dp"
	    android:layout_marginLeft="150dp"
	    android:textSize="15sp"
	    android:inputType="textEmailAddress"
	    android:hint="@string/edit_email"/>    
    
    <TextView
	    android:id="@+id/lblRetourDepart"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="200dp"
		android:layout_marginLeft="20dp"
		android:textSize="15sp"
	    android:text="@string/edit_retour_robot" 
	    android:textColor="#ffffff"/>
    
    <TextView
	    android:id="@+id/lblPhotoArrivee"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="280dp"
		android:layout_marginLeft="20dp"
		android:textSize="15sp"
	    android:text="@string/edit_photo" 
	    android:textColor="#ffffff"/>
    
   	<CheckBox
		android:id="@+id/cbxRetourDepart"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblRetourDepart"
        android:layout_alignBottom="@+id/lblRetourDepart"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignParentRight="true"
		android:checked="true"
        android:text="@string/cbx_retour"
        android:textSize="15sp"
        android:textColor="#ffffff"/>
    	
    <CheckBox
		android:id="@+id/cbxPhotoArrivee"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/lblPhotoArrivee"
        android:layout_alignBottom="@+id/lblPhotoArrivee"
        android:layout_alignLeft="@+id/cbxRetourDepart"
        android:checked="true"
        android:text="@string/cbx_retour"
        android:textSize="15sp"
        android:textColor="#ffffff"/>
    
    <Button
	    android:id="@+id/btnSuivant"
	    android:layout_width="100dp"
	    android:layout_height="40dp"
	    android:layout_marginTop="350dp"
		android:layout_marginLeft="30dp"
		android:text="@string/button_suivant"
		android:textSize="15sp"
		android:textColor="#ffffff"/>
    
    <Button
	    android:id="@+id/btnAnnuler"
	    android:layout_width="100dp"
	    android:layout_height="40dp"
	    android:layout_alignBaseline="@+id/btnSuivant"
	    android:layout_alignBottom="@+id/btnSuivant"
	    android:layout_alignLeft="@+id/cbxPhotoArrivee"
	    android:text="@string/button_annuler"
	    android:textSize="15sp"
	    android:textColor="#ffffff"/>    

</RelativeLayout>